accidental no changes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   
   <!-- Primary Meta Tags -->
-  <title>YourGuide.city — Discover the Best of Your City</title>
+  <title>YourGuide — Make Any Adventure, Your Adventure</title>
   <meta name="description" content="Explore the best restaurants, attractions, and hidden gems. YourGuide.city is your personal guide to unforgettable city experiences." />
 
   <!-- Bootstrap CSS (CDN) -->
@@ -81,7 +81,7 @@
     <!-- Hero Content -->
     <div class="container position-relative text-center text-white">
       <h1 class="display-3 fw-bold">Discover Your City’s Best</h1>
-      <p class="lead">From trendy restaurants to hidden gems, we’ve got you covered.</p>
+      <p class="lead">Your personal Tour Guide, in the palm of your hand.</p>
       <a href="guides.html" class="btn btn-lg btn-primary">Explore Guides</a>
     </div>
   </section>
