privay policy update

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <!-- Hero Content -->
     <div class="container position-relative text-center text-white">
-      <h1 class="display-3 fw-bold">Travel. Connect. Innovate.</h1>
+      <h1 class="display-3 fw-bold">Discovery. Connection. Community.</h1>
       <p class="lead">Combining cutting-edge technology with meaningful human connections.</p>
       <a href="guides.html" class="btn btn-lg btn-primary">Explore Guides</a>
       <a href="roadmap.html" class="btn btn-lg btn-outline-light ms-3">See Our Roadmap</a>
